[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Selections/SelectionMenu.gd" type="Script" id=1]
[ext_resource path="res://Themes/AutocratTheme.tres" type="Theme" id=2]

[node name="SelectionMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1031.0
margin_bottom = 607.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
margin_left = 281.0
margin_top = 156.0
margin_right = 754.0
margin_bottom = 443.0
select_mode = 1

[node name="IntroLabel" type="Label" parent="."]
margin_left = 358.102
margin_top = 39.0819
margin_right = 653.102
margin_bottom = 123.082

[node name="HowManyLeftLabel" type="Label" parent="."]
margin_left = 306.796
margin_top = 503.265
margin_right = 401.796
margin_bottom = 560.265
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 612.864
margin_top = 487.149
margin_right = 740.864
margin_bottom = 568.149
theme = ExtResource( 2 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 450.532
margin_top = 488.245
margin_right = 578.532
margin_bottom = 569.245
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
